[gd_scene load_steps=10 format=3 uid="uid://debubx8b778lg"]

[ext_resource type="Texture2D" uid="uid://dldufaeejm5ls" path="res://textures/menu/temp menu/background.png" id="1_qtm7j"]
[ext_resource type="Script" uid="uid://b4xs56ctl83j5" path="res://scripts/menu.gd" id="1_rs4fd"]
[ext_resource type="Texture2D" uid="uid://d0i7ooo41r8s2" path="res://textures/menu/title.png" id="2_er25s"]
[ext_resource type="Texture2D" uid="uid://d5sf8n5b050g" path="res://textures/menu/exit.png" id="4_vahrj"]
[ext_resource type="Texture2D" uid="uid://cahswi3ehgv6f" path="res://textures/menu/puzzle.png" id="5_g8scu"]
[ext_resource type="Texture2D" uid="uid://uv3tj7otrrmb" path="res://textures/menu/sandbox.png" id="6_uxpp7"]
[ext_resource type="Texture2D" uid="uid://dvnl4yiifhb1f" path="res://textures/menu/settings.png" id="7_2j00d"]
[ext_resource type="Texture2D" uid="uid://d3d6vfoc6ohc3" path="res://textures/menu/story.png" id="8_tafm8"]
[ext_resource type="Texture2D" uid="uid://dtd4cqoy66h2v" path="res://textures/menu/versus.png" id="9_7efkl"]

[node name="menu" type="Node2D"]
texture_filter = 1
script = ExtResource("1_rs4fd")

[node name="background" type="TextureRect" parent="."]
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("1_qtm7j")

[node name="title" type="TextureRect" parent="."]
offset_left = 94.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 34.0
scale = Vector2(2, 2)
texture = ExtResource("2_er25s")
expand_mode = 1
stretch_mode = 2

[node name="exit" type="TextureButton" parent="."]
offset_left = 50.0
offset_top = 10.0
offset_right = 62.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_vahrj")

[node name="puzzle" type="TextureButton" parent="."]
offset_left = 179.0
offset_top = 99.0
offset_right = 191.0
offset_bottom = 111.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_g8scu")

[node name="sandbox" type="TextureButton" parent="."]
offset_left = 148.0
offset_top = 126.0
offset_right = 160.0
offset_bottom = 138.0
scale = Vector2(2, 2)
texture_normal = ExtResource("6_uxpp7")

[node name="options" type="TextureButton" parent="."]
offset_left = 246.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 22.0
scale = Vector2(2, 2)
texture_normal = ExtResource("7_2j00d")

[node name="story" type="TextureButton" parent="."]
offset_left = 148.0
offset_top = 68.0
offset_right = 160.0
offset_bottom = 80.0
scale = Vector2(2, 2)
texture_normal = ExtResource("8_tafm8")

[node name="versus" type="TextureButton" parent="."]
offset_left = 119.0
offset_top = 97.0
offset_right = 131.0
offset_bottom = 109.0
scale = Vector2(2, 2)
texture_normal = ExtResource("9_7efkl")

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="puzzle" to="." method="_on_puzzle_pressed"]
[connection signal="pressed" from="sandbox" to="." method="_on_sandbox_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="versus" to="." method="_on_versus_pressed"]
